platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_1.platter
flag of x = (x + 1) * ("HELLO") > 1; 
start() {}